tests/test015.err
error: test015.tig:5:10: unknown variable `y'
