tests/test015.tig
/* ERR: unknown variable */
let
  var x := 42
in
  printi(y)
end
